hphp/test/slow/inout/bad-decl-1.php.expectf

Fatal error: syntax error, unexpected '&', expecting T_VARIABLE in %s/bad-decl-1.php on line 3
